# htop-win

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  build-cross.py  build.rs  bump-version.py
.github/workflows/: ci.yml  release.yml
media/: htop.rc
scripts/: benchmark.py  compare_versions.py  test-ui.py  update-deps.py
src/: app.rs  config.rs  data.rs  input.rs  installer.rs  installer_stub.rs  json.rs  lib.rs  main.rs  terminal.rs
src/system/: cache.rs  cpu.rs  d3dkmt.rs  memory.rs  mod.rs  native.rs  npu.rs  process.rs
src/ui/: colors.rs  dialogs.rs  footer.rs  header.rs  mod.rs  process_list.rs
tests/: ui_tests.rs  visual_test.rs
tests/snapshots/: htop_reference.txt
