[package]
name = "htop-win"
version = "0.0.5"
edition = "2024"
description = "A Windows clone of htop - interactive process viewer"
authors = ["htop-win contributors"]
license = "MIT"
repository = "https://github.com/htop-win/htop-win"
keywords = ["htop", "process", "monitor", "tui", "windows"]
categories = ["command-line-utilities", "os::windows-apis"]

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", default-features = false, features = ["events", "windows"] }
unicode-width = "0.2"
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
lexopt = "0.3"  # Lightweight arg parsing
directories = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Power",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Wdk_System_SystemInformation",
] }

[profile.release]
opt-level = "z"      # Optimize for size
lto = true
codegen-units = 1
panic = "abort"      # Smaller binary, no unwinding
strip = true         # Strip symbols
